[package]
name = "arkanoid-tui"
version = "0.1.2"
edition = "2021"
description = "Arkanoid built with Ratatui"
license = "MIT OR Apache-2.0"
exclude = ["static/*"]
categories = ["games", "command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/JustPretender/arkanoid-tui"
repository = "https://github.com/JustPretender/arkanoid-tui"

[features]
debug = [ "tracing-subscriber", "tracing-appender" ]
default = []

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
crossterm = "0.27.0"
rand = "0.8.5"
ratatui = "0.27.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }
tracing-appender = { version = "0.2.3" , optional = true}
